[gd_scene load_steps=16 format=2]

[ext_resource path="res://resources/fonts/default_font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://utils/video_wrapper.tscn" type="PackedScene" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://resources/cloud.png" type="Texture" id=4]
[ext_resource path="res://resources/fonts/dfont_big_menu.tres" type="DynamicFont" id=5]
[ext_resource path="res://resources/box.png" type="Texture" id=6]
[ext_resource path="res://resources/pause_off.png" type="Texture" id=7]
[ext_resource path="res://resources/pause_on.png" type="Texture" id=8]
[ext_resource path="res://scenes/additional/answer_box.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/base/question.gd" type="Script" id=10]
[ext_resource path="res://resources/font_chocolate_bold.ttf" type="DynamicFontData" id=11]

[sub_resource type="DynamicFont" id=1]
size = 23
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 40
use_mipmaps = true
use_filter = true
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=3]
size = 70
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="rectBgColor" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0.858824, 0.854902, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="rectBgColor2" type="ColorRect" parent="."]
anchor_right = 0.104
anchor_bottom = 1.0
margin_right = 0.503998
color = Color( 1, 0.694118, 0.686275, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rectBg" type="NinePatchRect" parent="."]
modulate = Color( 1, 0.862745, 0.862745, 1 )
anchor_left = 0.114138
anchor_top = 0.03
anchor_right = 0.975951
anchor_bottom = 0.543333
margin_top = -6.0
margin_right = 0.503784
texture = ExtResource( 6 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ctrlVideoQuestion" type="Control" parent="."]
visible = false
anchor_left = 0.117188
anchor_top = 0.025
anchor_right = 0.954102
anchor_bottom = 0.543333
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="vidVideoPlayer" parent="ctrlVideoQuestion" instance=ExtResource( 2 )]
anchor_left = 0.0140023
anchor_top = 0.0418007
anchor_right = 0.610268
anchor_bottom = 0.951769

[node name="labQuestionRight" type="Label" parent="ctrlVideoQuestion"]
anchor_left = 0.614936
anchor_top = 0.14791
anchor_right = 1.014
anchor_bottom = 0.945338
margin_top = 1.52588e-05
margin_right = 6.10352e-05
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Doloret sit amet Doloret sit amet Dol sit amet Doloret sit amet Doloret sit amet Doloret sit amet Doloret sit amet Doloret sit amet Doloret sit amet "
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ctrlNormalQuestion" type="Control" parent="."]
visible = false
anchor_left = 0.12207
anchor_top = 0.03
anchor_right = 0.958008
anchor_bottom = 0.53
margin_bottom = 3.05176e-05
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="labQuestionText" type="Label" parent="ctrlNormalQuestion"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 11.0
margin_right = -1.0
margin_bottom = -6.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Doloret sit amet Doloret sit amet Doloret sit amet Doloret sit amet Doloret sit amet Doloret sit amet Doloret sit amet Doloret sit amet Doloret sit amet Doloret sit amet Doloret sit amet Doloret sit amet Doloret sit amet "
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ctrlImageQuestion" type="Control" parent="."]
visible = false
anchor_left = 0.121094
anchor_top = 0.0316667
anchor_right = 0.956055
anchor_bottom = 0.481667
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="labQuestionTextSmall" type="Label" parent="ctrlImageQuestion"]
anchor_left = 0.54152
anchor_top = 0.0481481
anchor_right = 1.00702
anchor_bottom = 1.06296
margin_right = 6.10352e-05
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Doloret sit amet Doloret sit amet Dol sit amet Doloret sit amet Doloret sit amet Doloret sit amet Doloret sit amet Doloret sit amet Doloret sit amet "
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="rectImage" type="TextureRect" parent="ctrlImageQuestion"]
anchor_left = 0.0105263
anchor_top = 0.0111111
anchor_right = 0.528538
anchor_bottom = 1.09585
margin_right = 0.0999756
margin_bottom = 0.119995
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": true
}

[node name="rectBgTimer" type="NinePatchRect" parent="."]
self_modulate = Color( 0.635294, 1, 0.603922, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -165.998
margin_top = -4.0
margin_right = 27.0022
margin_bottom = 95.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="labTimerText" type="Label" parent="rectBgTimer"]
anchor_left = 0.139896
anchor_top = 0.131313
anchor_right = 0.725389
anchor_bottom = 0.828283
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="contAnswers" type="Control" parent="."]
anchor_left = 0.115234
anchor_top = 0.553333
anchor_right = 0.982422
anchor_bottom = 0.991667
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="ctrlAnswer1" parent="contAnswers" instance=ExtResource( 9 )]
anchor_right = 0.494
anchor_bottom = 0.492
margin_right = -0.274048
margin_bottom = 0.112015

[node name="ctrlAnswer2" parent="contAnswers" instance=ExtResource( 9 )]
anchor_left = 0.494
anchor_right = 0.987
anchor_bottom = 0.492
margin_left = -0.274048
margin_right = 0.322876
margin_bottom = 0.112015

[node name="ctrlAnswer3" parent="contAnswers" instance=ExtResource( 9 )]
anchor_top = 0.507576
anchor_right = 0.493685
anchor_bottom = 1.0
margin_bottom = 0.0

[node name="ctrlAnswer4" parent="contAnswers" instance=ExtResource( 9 )]
anchor_left = 0.493685
anchor_top = 0.507576
anchor_right = 0.987371
anchor_bottom = 1.0
margin_bottom = 0.0

[node name="contPlayerIcons" type="GridContainer" parent="."]
anchor_left = 0.019
anchor_top = 0.0166667
anchor_right = 0.019
anchor_bottom = 0.862
margin_left = -0.456001
margin_right = 80.544
margin_bottom = -0.200012
__meta__ = {
"_edit_use_anchors_": true
}

[node name="btnPause" type="TextureButton" parent="."]
anchor_left = 0.052
anchor_top = 1.0
anchor_right = 0.052
anchor_bottom = 1.0
margin_left = -35.6091
margin_top = -80.8591
margin_right = 35.3909
margin_bottom = -13.8591
toggle_mode = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="labQuestionCounter" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.4 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -243.75
margin_top = 24.5407
margin_right = -138.75
margin_bottom = 60.5407
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0 / 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rectSplash" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0.521569, 0.505882, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="labSplashTimer" type="Label" parent="rectSplash"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
[connection signal="toggled" from="btnPause" to="." method="_on_btnPause_toggled"]
